# delphi-ai-webcam

./: .env.example  .gitignore  README.md  install.bat  install.command  pyproject.toml  run.bat  run.command
docs/: PLAN.md
src/: audio.py  cache.py  config.py  hedra.py  main.py  video.py
